# HarvestReport

./: .gitignore  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
harvest/: harvest.py  transform.py  utils.py  visual.py
